--- a/package.json
+++ b/package.json
@@ -2,13 +2,17 @@
     "name": "flax",
     "displayName": "flax-language",
     "description": "Syntax definition for the Flax language",
-    "version": "0.0.1",
+    "version": "0.1.1",
     "publisher": "zhiayang",
     "engines": {
         "vscode": "^1.16.0"
     },
+    "repository": {
+        "url": "https://github.com/zhiayang/vscode-flax",
+        "type": "git"
+    },
     "categories": [
-        "Languages"
+        "Programming Languages"
     ],
     "contributes": {
         "languages": [{
