--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,7 +7,7 @@
             "type": "extensionHost",
             "request": "launch",
             "runtimeExecutable": "${execPath}",
-            "args": ["--extensionDevelopmentPath=${workspaceRoot}" ]
+            "args": [ "--extensionDevelopmentPath=${workspaceRoot}", "D:/Projects/vscode-flax/test.flx" ]
         }
     ]
 }
