--- a/package.json
+++ b/package.json
@@ -35,5 +35,8 @@
                 "path": "./syntaxes/flax.tmLanguage"
             }
         ]
+    },
+    "dependencies": {
+        "vsce": "^1.53.0"
     }
 }
